--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "fe3ee01b-fa89-4666-a8a1-df7b8bc9c6d8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -32,21 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "f5a6a2ff-57c6-45ca-a919-87adf04e8764",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:botocore.credentials:Found credentials from IAM Role: BaseNotebookInstanceEc2InstanceRole\n",
-      "INFO:botocore.credentials:Found credentials from IAM Role: BaseNotebookInstanceEc2InstanceRole\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize SageMaker session and client\n",
     "sagemaker_session = sagemaker.Session()\n",
@@ -57,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "48aea13c-ea78-4594-bb26-b6108b5affec",
    "metadata": {
     "tags": []
@@ -87,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "2b3a6c34-3a72-4905-a486-c6385719cf32",
    "metadata": {
     "tags": []
@@ -107,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "ea850f36-16ed-494b-9ea8-45b35086733d",
    "metadata": {
     "tags": []
@@ -125,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "a839b4bc-d7ec-465f-bbd7-ee192b2b82b3",
    "metadata": {
     "tags": []
@@ -147,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "0c364f01-74e3-47b7-943a-09d4b2dbe238",
    "metadata": {
     "tags": []
@@ -166,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "aa2a6eac-12a3-4bf2-8e93-139911475da9",
    "metadata": {
     "tags": []
@@ -183,21 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "bdd371e2-a772-4e8c-b635-c416cf114d5f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "register_step = model.register(\n",
     "    content_types=[\"text/csv\"],\n",
@@ -211,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "03d0a02f-6155-4825-9232-ae94a15ae87b",
    "metadata": {
     "tags": []
@@ -224,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "7d82fd02-743a-4424-bc82-9226f21a36bc",
    "metadata": {
     "tags": []
@@ -241,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "fb160b45-fd90-4185-b661-0a2c93c5889a",
    "metadata": {
     "tags": []
@@ -261,16 +234,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'adc1a503-8817-49d3-9a82-ca5eafc99b9b',\n",
+       " 'ResponseMetadata': {'RequestId': '14fd78ee-e19e-406f-8dc7-0aab04aa85fc',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'adc1a503-8817-49d3-9a82-ca5eafc99b9b',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '14fd78ee-e19e-406f-8dc7-0aab04aa85fc',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '84',\n",
-       "   'date': 'Fri, 16 Aug 2024 18:57:06 GMT'},\n",
+       "   'date': 'Fri, 16 Aug 2024 19:11:29 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "cec0fb7a-c825-4730-959c-1b8b1cdfd4a2",
    "metadata": {
     "tags": []
@@ -291,10 +264,10 @@
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/95chhwx3ntlw', sagemaker_session=<sagemaker.session.Session object at 0x7fa3c6a79600>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/m6mogxpyhmx9', sagemaker_session=<sagemaker.session.Session object at 0x7fa3c65b9f30>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
