--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -261,12 +261,12 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'e259356e-df5c-42f7-aa93-9ca6078339fe',\n",
+       " 'ResponseMetadata': {'RequestId': '07199dbf-7614-4ba3-9b5e-b659a8238d3b',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'e259356e-df5c-42f7-aa93-9ca6078339fe',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '07199dbf-7614-4ba3-9b5e-b659a8238d3b',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '84',\n",
-       "   'date': 'Fri, 16 Aug 2024 19:28:29 GMT'},\n",
+       "   'date': 'Sat, 17 Aug 2024 07:08:48 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
@@ -291,7 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/jxc3dwtqhrk7', sagemaker_session=<sagemaker.session.Session object at 0x7f14add835e0>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/1dbd311o2apt', sagemaker_session=<sagemaker.session.Session object at 0x7f5ad00427a0>)"
       ]
      },
      "execution_count": 13,
@@ -303,14 +303,6 @@
     "# Start pipelines\n",
     "training_pipeline.start()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ad84062-d150-414e-bee2-8aa9d6c2b5a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
