--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "fe3ee01b-fa89-4666-a8a1-df7b8bc9c6d8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -32,21 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "f5a6a2ff-57c6-45ca-a919-87adf04e8764",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:botocore.credentials:Found credentials from IAM Role: BaseNotebookInstanceEc2InstanceRole\n",
-      "INFO:botocore.credentials:Found credentials from IAM Role: BaseNotebookInstanceEc2InstanceRole\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize SageMaker session and client\n",
     "sagemaker_session = sagemaker.Session()\n",
@@ -57,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "48aea13c-ea78-4594-bb26-b6108b5affec",
    "metadata": {
     "tags": []
@@ -87,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "id": "2b3a6c34-3a72-4905-a486-c6385719cf32",
    "metadata": {
     "tags": []
@@ -107,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "ea850f36-16ed-494b-9ea8-45b35086733d",
    "metadata": {
     "tags": []
@@ -118,14 +100,14 @@
     "    name=\"PreprocessData\",\n",
     "    processor=script_processor,\n",
     "    inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"train\", destination=output_data_uri, source=\"/opt/ml/processing/output\")],\n",
+    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"train\", destination=f\"{output_data_uri.default_value}train\", source=\"/opt/ml/processing/output/train\")],\n",
     "    code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "id": "a839b4bc-d7ec-465f-bbd7-ee192b2b82b3",
    "metadata": {
     "tags": []
@@ -147,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "0c364f01-74e3-47b7-943a-09d4b2dbe238",
    "metadata": {
     "tags": []
@@ -166,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "id": "aa2a6eac-12a3-4bf2-8e93-139911475da9",
    "metadata": {
     "tags": []
@@ -183,21 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "id": "bdd371e2-a772-4e8c-b635-c416cf114d5f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "register_step = model.register(\n",
     "    content_types=[\"text/csv\"],\n",
@@ -211,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "03d0a02f-6155-4825-9232-ae94a15ae87b",
    "metadata": {
     "tags": []
@@ -224,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "id": "7d82fd02-743a-4424-bc82-9226f21a36bc",
    "metadata": {
     "tags": []
@@ -241,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "fb160b45-fd90-4185-b661-0a2c93c5889a",
    "metadata": {
     "tags": []
@@ -261,16 +234,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '07199dbf-7614-4ba3-9b5e-b659a8238d3b',\n",
+       " 'ResponseMetadata': {'RequestId': '01664567-b379-4dcc-a8b2-18257639a389',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '07199dbf-7614-4ba3-9b5e-b659a8238d3b',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '01664567-b379-4dcc-a8b2-18257639a389',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '84',\n",
-       "   'date': 'Sat, 17 Aug 2024 07:08:48 GMT'},\n",
+       "   'date': 'Sat, 17 Aug 2024 08:39:27 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "cec0fb7a-c825-4730-959c-1b8b1cdfd4a2",
    "metadata": {
     "tags": []
@@ -291,10 +264,10 @@
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/1dbd311o2apt', sagemaker_session=<sagemaker.session.Session object at 0x7f5ad00427a0>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/cni8stk75nus', sagemaker_session=<sagemaker.session.Session object at 0x7fb60dae27d0>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,6 +276,14 @@
     "# Start pipelines\n",
     "training_pipeline.start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38491be9-1607-4be3-aaec-bc373dc76f32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
