--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -49,12 +49,12 @@
     "# Define input parameters\n",
     "input_data_uri = ParameterString(\n",
     "    name=\"InputDataUri\",\n",
-    "    default_value=\"s3://hemz-bucket/input-data/\"\n",
+    "    default_value=\"s3://hemz-sagemaker-bucket/input-data/\"\n",
     ")\n",
     "\n",
     "output_data_uri = ParameterString(\n",
     "    name=\"OutputDataUri\",\n",
-    "    default_value=\"s3://hemz-bucket/output-data/\"\n",
+    "    default_value=\"s3://hemz-sagemaker-bucket/output-data/\"\n",
     ")\n",
     "\n",
     "model_approval_status = ParameterString(\n",
@@ -62,9 +62,9 @@
     "    default_value=\"Approved\"\n",
     ")\n",
     "\n",
-    "custom_image_uri = \"654654222480.dkr.ecr.us-east-1.amazonaws.com/demo_prophet:latest\"\n",
+    "custom_image_uri = \"654654222480.dkr.ecr.ap-south-1.amazonaws.com/demo_prophet:latest\"\n",
     "\n",
-    "model_package_group_name = \"DemoProphetModelGroup\""
+    "model_package_group_name = \"ProphetModelGroup\""
    ]
   },
   {
