--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "fe3ee01b-fa89-4666-a8a1-df7b8bc9c6d8",
    "metadata": {
     "tags": []
@@ -16,14 +16,15 @@
     "from sagemaker.processing import ScriptProcessor\n",
     "from sagemaker.workflow.pipeline import Pipeline\n",
     "from sagemaker.workflow.pipeline_context import PipelineSession\n",
-    "from sagemaker.workflow.steps import ProcessingStep, TrainingStep, CreateModelStep\n",
+    "from sagemaker.workflow.steps import ProcessingStep, TrainingStep\n",
+    "from sagemaker.model import Model\n",
     "from sagemaker.workflow.model_step import ModelStep\n",
     "from sagemaker.workflow.parameters import ParameterString"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "f5a6a2ff-57c6-45ca-a919-87adf04e8764",
    "metadata": {
     "tags": []
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "48aea13c-ea78-4594-bb26-b6108b5affec",
    "metadata": {
     "tags": []
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "2b3a6c34-3a72-4905-a486-c6385719cf32",
    "metadata": {
     "tags": []
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "ea850f36-16ed-494b-9ea8-45b35086733d",
    "metadata": {
     "tags": []
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "a839b4bc-d7ec-465f-bbd7-ee192b2b82b3",
    "metadata": {
     "tags": []
@@ -123,13 +124,13 @@
     "    instance_type=\"ml.m5.large\",\n",
     "    entry_point='code/train.py',\n",
     "    script_mode=True,\n",
-    "    output_path=\"s3://hemz-bucket/output-data/model-artifacts/\"\n",
+    "    output_path=\"s3://hemz-sagemaker-bucket/output-data/model-artifacts/\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "0c364f01-74e3-47b7-943a-09d4b2dbe238",
    "metadata": {
     "tags": []
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "aa2a6eac-12a3-4bf2-8e93-139911475da9",
    "metadata": {
     "tags": []
@@ -165,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "bdd371e2-a772-4e8c-b635-c416cf114d5f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "register_step = model.register(\n",
+    "register_model_step = model.register(\n",
     "    content_types=[\"text/csv\"],\n",
     "    response_types=[\"text/csv\"],\n",
-    "    # inference_instances=[\"ml.t2.medium\", \"ml.m5.xlarge\"],\n",
-    "    # transform_instances=[\"ml.m5.xlarge\"],\n",
+    "    inference_instances=[\"ml.t2.medium\", \"ml.m5.xlarge\"],\n",
+    "    transform_instances=[\"ml.m5.xlarge\"],\n",
     "    model_package_group_name=model_package_group_name,\n",
     "    approval_status=model_approval_status,\n",
     ")"
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "03d0a02f-6155-4825-9232-ae94a15ae87b",
    "metadata": {
     "tags": []
@@ -192,12 +193,63 @@
    "outputs": [],
    "source": [
     "# Define model registration step\n",
-    "register_step = ModelStep(name=\"RegisterModel\", step_args=register_step)"
+    "register_model_step = ModelStep(name=\"RegisterModel\", step_args=register_model_step)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
+   "id": "161212ce-f8dc-4860-9ce2-b04ade9c0790",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Define create model step (https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-model)\n",
+    "model_create_step = ModelStep(\n",
+    "   name=\"CreateModel\",\n",
+    "   step_args=model.create(instance_type=\"ml.m5.xlarge\"),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7fe4223-95bc-47a5-aef4-dd7fcdea169d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# endpoint_config_step = EndpointConfigStep(\n",
+    "#     name=\"CreateEndpointConfig\",\n",
+    "#     endpoint_config_name=\"prophet-endpoint-config\",\n",
+    "#     model_name=create_model_step.properties.ModelName,\n",
+    "#     initial_instance_count=1,\n",
+    "#     instance_type=\"ml.m5.large\"\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15f42dcb-b18a-4b47-945c-37721de042cf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # Define endpoint step\n",
+    "# endpoint_step = EndpointStep(\n",
+    "#     name=\"DeployModelToEndpoint\",\n",
+    "#     endpoint_name=\"prophet-endpoint\",\n",
+    "#     endpoint_config_name=endpoint_config_step.properties.EndpointConfigName\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d82fd02-743a-4424-bc82-9226f21a36bc",
    "metadata": {
     "tags": []
@@ -208,46 +260,34 @@
     "training_pipeline = Pipeline(\n",
     "    name=\"TrainingPipeline\",\n",
     "    parameters=[input_data_uri, output_data_uri, model_approval_status],\n",
-    "    steps=[preprocessing_step, training_step],\n",
+    "    steps=[preprocessing_step, training_step, register_model_step, model_create_step],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "id": "72db3820-8af1-4a6d-aa3e-bcc38a80083b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # Deployment pipeline\n",
+    "# deployment_pipeline = Pipeline(\n",
+    "#     name=\"DeploymentPipeline\",\n",
+    "#     steps=[endpoint_config_step, endpoint_step]\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fb160b45-fd90-4185-b661-0a2c93c5889a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
-      "WARNING:sagemaker.workflow.utilities:Popping out 'TrainingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
-      "WARNING:sagemaker.workflow.utilities:Popping out 'ProcessingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n",
-      "WARNING:sagemaker.workflow.utilities:Popping out 'TrainingJobName' from the pipeline definition by default since it will be overridden at pipeline execution time. Please utilize the PipelineDefinitionConfig to persist this field in the pipeline definition if desired.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '01664567-b379-4dcc-a8b2-18257639a389',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '01664567-b379-4dcc-a8b2-18257639a389',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '84',\n",
-       "   'date': 'Sat, 17 Aug 2024 08:39:27 GMT'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Execute pipelines\n",
     "training_pipeline.upsert(role_arn=role)"
@@ -255,23 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "cec0fb7a-c825-4730-959c-1b8b1cdfd4a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/cni8stk75nus', sagemaker_session=<sagemaker.session.Session object at 0x7fb60dae27d0>)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start pipelines\n",
     "training_pipeline.start()"
